<resources>
    <string name="app_name">ECommerce App</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name: </string>
    <string name="email">Email: </string>
    <string name="pass">Password: </string>
    <string name="nohaveacount">Dont Have any Acount? </string>
    <string name="signin">Sign In</string>
    <string name="haveacount">"If You Already have Acount "</string>
    <string name="first_slide">Choose Your Products</string>
    <string name="second_slide">Fast Delivery</string>
    <string name="third_slide">Good service</string>
    <string name="description">Lorem Ipsum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment">Continue to payment</string>
    <string name="addadress">Add Address</string>
</resources>