<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity"
    android:background="@drawable/backgroundtwo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/aclonica"
        android:text="@string/signup"
        android:textColor="@color/head"
        android:textSize="90sp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/addperson"
        android:layout_margin="5dp"
        android:padding="4dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/name"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/ic_baseline_account_circle"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:padding="15dp"/>

    <EditText
        android:inputType="numberPassword"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="8dp"
        android:hint="@string/pass"
        android:padding="15dp"/>

    <Button
        android:id="@+id/btn_signup"
        android:textSize="25sp"
        android:width="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haveacount"
            android:textSize="25sp"
            android:textStyle="italic"/>
        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:onClick="signin"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </LinearLayout>



</LinearLayout>